--- a/Plastic_doc.html
+++ b/Plastic_doc.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
@@ -25,7 +30,7 @@
   </head>
 
   <body>
-        <header>
+    <header>
       <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
           <!-- Logo -->
@@ -172,7 +177,7 @@
                 <div
                   class="d-flex align-items-center justify-content-between border-bottom px-2 py-2 bg-light"
                 >
-                  <h6 class="mb-0">Notifications</h6>
+                  <h6 class="mb-0">ការជូនដំណឹង</h6>
                   <i class="bi bi-three-dots"></i>
                 </div>
 
@@ -188,7 +193,7 @@
                       <div class="content ms-3" style="max-width: 220px">
                         <p class="fw-bolder mb-1">Pozz Mao</p>
                         <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur.
+                          ការបញ្ជាទិញរបស់អ្នកបានជោគជ័យ
                         </p>
                       </div>
                     </div>
@@ -198,17 +203,18 @@
                 <!-- Collapse Extra Notifications -->
                 <div class="collapse" id="extraNoti">
                   <li class="noti-item">
-                    <a class="dropdown-item" href="frist_doc.html">
+                    <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/image/avatar-4.jpg"
+                          src="assets/image/avatar-5.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
                         <div class="content ms-3" style="max-width: 220px">
                           <p class="fw-bolder mb-1">John Doe</p>
                           <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                            More hidden notifications appear here.
+                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល
+                            នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
                           </p>
                         </div>
                       </div>
@@ -227,7 +233,7 @@
                     aria-controls="extraNoti"
                     style="font-size: 14px"
                   >
-                    See more
+                    បន្ថែមទៀត
                   </a>
                 </li>
               </ul>
@@ -373,7 +379,7 @@
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
                       />
-                      <div class="card-body" style="height: 100px;">
+                      <div class="card-body" style="height: 100px">
                         <p class="card-text">
                           សំរាមប្លាស្ទិក
                           ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
@@ -399,7 +405,7 @@
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
                       />
-                      <div class="card-body" style="height: 100px;">
+                      <div class="card-body" style="height: 100px">
                         <p class="card-text">
                           ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
                           និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
@@ -425,7 +431,7 @@
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
                       />
-                      <div class="card-body" style="height: 100px;">
+                      <div class="card-body" style="height: 100px">
                         <p class="card-text">
                           តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
                         </p>
@@ -436,7 +442,7 @@
               </div>
 
               <div class="swiper-slide">
-                <div class="card" >
+                <div class="card">
                   <a
                     href="Plastic_doc.html"
                     class="text-decoration-none text-dark"
@@ -450,9 +456,10 @@
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
                       />
-                      <div class="card-body" style="height: 100px;">
+                      <div class="card-body" style="height: 100px">
                         <p class="card-text">
-                          ជំនាញកែច្នៃបន្លែ និង​ផ្លែឈើ ជំនាញថ្មី​ជួយ​កសិករកែច្នៃផលិតផលកសិកម្ម
+                          ជំនាញកែច្នៃបន្លែ និង​ផ្លែឈើ
+                          ជំនាញថ្មី​ជួយ​កសិករកែច្នៃផលិតផលកសិកម្ម
                         </p>
                       </div>
                     </div>
@@ -475,7 +482,7 @@
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
                       />
-                      <div class="card-body" style="height: 100px;">
+                      <div class="card-body" style="height: 100px">
                         <p class="card-text">
                           ប្រយោជន៍នៃកាកកាហ្វេចំពោះដំណាំដែលអ្នកមិននឹកស្មានដល់
                         </p>
