--- a/event2.html
+++ b/event2.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forest EcoPreneurs Program</title>
+    <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!--CSS tc-->
@@ -178,7 +183,7 @@
                 <div
                   class="d-flex align-items-center justify-content-between border-bottom px-2 py-2 bg-light"
                 >
-                  <h6 class="mb-0">Notifications</h6>
+                  <h6 class="mb-0">ការជូនដំណឹង</h6>
                   <i class="bi bi-three-dots"></i>
                 </div>
 
@@ -194,7 +199,7 @@
                       <div class="content ms-3" style="max-width: 220px">
                         <p class="fw-bolder mb-1">Pozz Mao</p>
                         <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur.
+                          ការបញ្ជាទិញរបស់អ្នកបានជោគជ័យ
                         </p>
                       </div>
                     </div>
@@ -207,14 +212,14 @@
                     <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/image/avatar-4.jpg"
+                          src="assets/image/avatar-5.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
                         <div class="content ms-3" style="max-width: 220px">
                           <p class="fw-bolder mb-1">John Doe</p>
                           <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                            More hidden notifications appear here.
+                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
                           </p>
                         </div>
                       </div>
@@ -233,7 +238,7 @@
                     aria-controls="extraNoti"
                     style="font-size: 14px"
                   >
-                    See more
+                    បន្ថែមទៀត
                   </a>
                 </li>
               </ul>
