--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>មតិយោបល់</title>
-
+    <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
     <!-- Favicon -->
     <link
       rel="icon"
