--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forget Password</title>
+    <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <!-- Custom CSS -->
