--- a/frist_doc.html
+++ b/frist_doc.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
@@ -168,11 +173,68 @@
                 class="dropdown-menu dropdown-menu-center dropdown-menu-end p-0 shadow"
                 style="width: 320px; max-height: 350px; overflow-y: auto"
               >
-                <li
-                  class="dropdown-header d-flex justify-content-between align-items-center px-2 py-2 bg-light"
+                <!-- Header -->
+                <div
+                  class="d-flex align-items-center justify-content-between border-bottom px-2 py-2 bg-light"
                 >
-                  <span>Notifications</span>
+                  <h6 class="mb-0">ការជូនដំណឹង</h6>
                   <i class="bi bi-three-dots"></i>
+                </div>
+
+                <!-- Notifications -->
+                <li class="noti-item">
+                  <a class="dropdown-item" href="#">
+                    <div class="py-2 d-flex align-items-center">
+                      <img
+                        src="assets/image/avatar-4.jpg"
+                        class="rounded-circle"
+                        style="width: 40px; height: 40px"
+                      />
+                      <div class="content ms-3" style="max-width: 220px">
+                        <p class="fw-bolder mb-1">Pozz Mao</p>
+                        <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                          ការបញ្ជាទិញរបស់អ្នកបានជោគជ័យ
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+
+                <!-- Collapse Extra Notifications -->
+                <div class="collapse" id="extraNoti">
+                  <li class="noti-item">
+                    <a class="dropdown-item" href="#">
+                      <div class="py-2 d-flex align-items-center">
+                        <img
+                          src="assets/image/avatar-5.jpg"
+                          class="rounded-circle"
+                          style="width: 40px; height: 40px"
+                        />
+                        <div class="content ms-3" style="max-width: 220px">
+                          <p class="fw-bolder mb-1">John Doe</p>
+                          <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល
+                            នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+
+                <!-- See More -->
+                <li class="text-center border-top">
+                  <a
+                    class="btn btn-link w-100 py-2 d-block text-decoration-none fw-semibold text-success"
+                    data-bs-toggle="collapse"
+                    href="#extraNoti"
+                    role="button"
+                    aria-expanded="false"
+                    aria-controls="extraNoti"
+                    style="font-size: 14px"
+                  >
+                    បន្ថែមទៀត
+                  </a>
                 </li>
               </ul>
             </div>
@@ -319,7 +381,8 @@
                   />
                   <div class="card-body">
                     <p class="card-text">
-                    ការកែច្នៃស្រទបស្លា ជាឧបករណ៍ប្រើប្រាស់ផ្សេងៗ ចូលរួមចំណែកយ៉ាងសំខាន់
+                      ការកែច្នៃស្រទបស្លា ជាឧបករណ៍ប្រើប្រាស់ផ្សេងៗ
+                      ចូលរួមចំណែកយ៉ាងសំខាន់
                     </p>
                   </div>
                 </div>
@@ -341,7 +404,8 @@
                   />
                   <div class="card-body">
                     <p class="card-text">
-                      ជំនាញកែច្នៃបន្លែ និង​ផ្លែឈើ ជំនាញថ្មី​ជួយ​កសិករកែច្នៃផលិតផលកសិកម្ម
+                      ជំនាញកែច្នៃបន្លែ និង​ផ្លែឈើ
+                      ជំនាញថ្មី​ជួយ​កសិករកែច្នៃផលិតផលកសិកម្ម
                     </p>
                   </div>
                 </div>
