--- a/payment.html
+++ b/payment.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Checkout</title>
     <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
@@ -15,16 +20,6 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
   </head>
-  <style>
-    /* body {
-      color: #334155;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      padding: 20px 0;
-      background-color: #f0ffeb;
-    } */
-  </style>
 
   <body class="bg-payment">
     <main>
