--- a/register.html
+++ b/register.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log in | Sign up</title>
+    <link
+      rel="icon"
+      href="/assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
     <!-- css  -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Suo LyLay  -->
