--- a/assets/pages/signin.html
+++ b/assets/pages/signin.html
@@ -6,14 +6,14 @@
     <title>Sign-In</title>
     <link
       rel="icon"
-      href="/assets/image/green_leaves_round_logo.png"
+      href="/../image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
     <!-- Bootstrap 5 CSS -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -33,7 +33,7 @@
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-10 col-md-10 position-relative">
               <img
-                src="assets/chhorng/img/trashbin.png"
+                src="../chhorng/img/trashbin.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -45,7 +45,7 @@
                 "
               />
               <img
-                src="assets/chhorng/img/image.png"
+                src="../chhorng/img/image.png"
                 class="position-absolute object-fit-contain"
                 alt=""
                 style="
@@ -57,7 +57,7 @@
                 "
               />
               <img
-                src="assets/chhorng/img/trash-recycle-sign.png"
+                src="../chhorng/img/trash-recycle-sign.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -69,7 +69,7 @@
                 "
               />
               <img
-                src="assets/chhorng/img/recy-icon.png"
+                src="../chhorng/img/recy-icon.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -198,19 +198,19 @@
                           href="https://appleid.apple.com/auth/authorize"
                           target="_blank"
                           ><img
-                            src="assets/chhorng/img/apple.png"
+                            src="../chhorng/img/apple.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://www.facebook.com/login" target="_blank"
                           ><img
-                            src="assets/chhorng/img/fb.png"
+                            src="../chhorng/img/fb.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://accounts.google.com/" target="_blank"
                           ><img
-                            src="assets/chhorng/img/Google.png"
+                            src="../chhorng/img/Google.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
@@ -289,19 +289,19 @@
                           href="https://appleid.apple.com/auth/authorize"
                           target="_blank"
                           ><img
-                            src="assets/chhorng/img/apple.png"
+                            src="../chhorng/img/apple.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://www.facebook.com/login" target="_blank"
                           ><img
-                            src="assets/chhorng/img/fb.png"
+                            src="../chhorng/img/fb.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://accounts.google.com/" target="_blank"
                           ><img
-                            src="assets/chhorng/img/Google.png"
+                            src="../chhorng/img/Google.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
@@ -312,7 +312,7 @@
                 <!-- Image Section -->
                 <div class="col-md-7 d-none d-md-block p-1 rounded-4">
                   <img
-                    src="assets/chhorng/img/recycle.jpg"
+                    src="../chhorng/img/recycle.jpg"
                     class="rounded-4 h-100 w-100 object-fit-cover"
                     alt="Sign-In Image"
                   />
@@ -325,6 +325,6 @@
     </main>
 
     <!-- Bootstrap JS -->
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
